--- a/index.html
+++ b/index.html
@@ -32,38 +32,34 @@
       <section>
         <div id="title">
           <h1>Blog</h1>
-          <p>Blog site</p>
+          <p>nikicat't blog</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/nikicat">nikicat</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>
+<a href="https://developers.google.com/safe-browsing/developers_guide_v2">SafeBrowsing API</a> implementation comparison</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Chrome and Firefox checks every page with malware and phishing blacklists. From the beginning there was only one provider for such lists - Google. About a year ago Yandex have started to provide similar service with compatible API.
+Here is <a href="https://gist.github.com/3933558">the sbdownload.sh script</a> that downloads all the chunks for malware blacklist and outputs some useful info:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>$ ./sbdownload.sh 
+have: a:94081-95769,91521-94080,89441-91520,88801-89440,87041-88800,85441-87040,85093-85440:s:97561-99065,95361-97600,94001-95360,93441-94080,91961-93440,90561-92160,90241-90560
+chunks: 19823
+files: 73
+size: 7906554
+$ ./sbdownload.sh yandex
+have: a:13373-13452,13293-13372,13213-13292,13133-13212,13053-13132,12973-13052,12893-12972,12813-12892,12801-12812:s:11676-11715,11636-11675,11596-11635,11556-11595,11516-11555,11476-11515,11436-11475,11396-11435,11356-11395,11316-11355,11302-11315
+chunks: 1067
+files: 1067
+size: 1869909
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>As you can see, Google consolidates chunks so you finally need to download only 73 files for ~8MB database and Yandex provides each chunk in a separate file so there are 1067 files for &lt;2MB database.
+Also, Google have way more chunks than Yandex, possibly because Yandex resets the whole database sometimes. I have no historical data about either API, but it must not be too hard to implement such monitoring in the future.</p>
 
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Feel free to fix this page.</p>
       </section>
 
     </div>
