--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <div id="title">
           <h1>Blog</h1>
-          <p>nikicat't blog</p>
+          <p>nikicat's blog</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/nikicat">nikicat</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
