--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Blog by nikicat</title>
+    <title>Safebrowsing API downloader/comparison</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -20,9 +20,8 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/nikicat/blog">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/nikicat/blog/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/nikicat/blog/tarball/master">TAR</a></li>
+          <li class="fork"><a href="https://github.com/nikicat/sbdownload">View On GitHub</a></li>
+          <li class="downloads"><a href="https://raw.github.com/nikicat/sbdownload/master/sbdownload.sh">sbapi.sh</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
@@ -31,8 +30,8 @@
 
       <section>
         <div id="title">
-          <h1>Blog</h1>
-          <p>nikicat's blog</p>
+          <h1>sbapi.sh</h1>
+          <p>Download and compare SafeBrowsing APIs</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/nikicat">nikicat</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
@@ -42,7 +41,7 @@
 <a href="https://developers.google.com/safe-browsing/developers_guide_v2">SafeBrowsing API</a> implementation comparison</h3>
 
 <p>Chrome and Firefox checks every page with malware and phishing blacklists. From the beginning there was only one provider for such lists - Google. About a year ago Yandex have started to provide similar service with compatible API.
-Here is <a href="https://gist.github.com/3933558">the sbdownload.sh script</a> that downloads all the chunks for malware blacklist and outputs some useful info:</p>
+Here is <a href="https://github.com/nikicat/sbdownload/blob/master/sbdownload.sh">the sbdownload.sh script</a> that downloads all the chunks for malware blacklist and outputs some useful info:</p>
 
 <pre><code>$ ./sbdownload.sh 
 have: a:94081-95769,91521-94080,89441-91520,88801-89440,87041-88800,85441-87040,85093-85440:s:97561-99065,95361-97600,94001-95360,93441-94080,91961-93440,90561-92160,90241-90560
