--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/nikicat/sbapi.sh">View On GitHub</a></li>
-          <li class="downloads"><a href="https://raw.github.com/nikicat/sbapi.sh/master/sbapi.sh">sbapi.sh</a></li>
+          <li class="fork"><a href="https://github.com/nikicat/sbapi">View On GitHub</a></li>
+          <li class="downloads"><a href="https://raw.github.com/nikicat/sbapi/master/sbapi.sh">sbapi.sh</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
@@ -38,10 +38,10 @@
         </div>
 
         <h3>
-<a href="https://developers.google.com/safe-browsing/developers_guide_v2">SafeBrowsing API</a> implementation comparison</h3>
+<a href="https://developers.google.com/safe-browsing/developers_guide_v2">SafeBrowsing API</a> implementations comparison</h3>
 
 <p>Chrome and Firefox checks every page with malware and phishing blacklists. From the beginning there was only one provider for such lists - Google. About a year ago Yandex have started to provide similar service with compatible API.
-Here is <a href="https://github.com/nikicat/sbapi.sh/blob/master/sbapi.sh">the sbapi.sh script</a> that downloads all the chunks for malware blacklist and outputs some useful info:</p>
+Here is <a href="https://github.com/nikicat/sbapi/blob/master/sbapi.sh">sbapi.sh script</a> that downloads all the chunks for malware blacklist and outputs some useful info:</p>
 
 <pre><code>$ ./sbapi.sh 
 have: a:94081-95769,91521-94080,89441-91520,88801-89440,87041-88800,85441-87040,85093-85440:s:97561-99065,95361-97600,94001-95360,93441-94080,91961-93440,90561-92160,90241-90560
