added link to edit index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ size: 1869909
 <p>As you can see, Google consolidates chunks so you finally need to download only 73 files for ~8MB database and Yandex provides each chunk in a separate file so there are 1067 files for &lt;2MB database.
 Also, Google have way more chunks than Yandex, possibly because Yandex resets the whole database sometimes. I have no historical data about either API, but it must not be too hard to implement such monitoring in the future.</p>
 
-<p>Feel free to fix this page.</p>
+<p>Feel free to <a href="https://github.com/nikicat/sbapi/edit/gh-pages/index.html">fix this page</a>.</p>
       </section>
 
     </div>
