--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@ size: 1869909
 Also, Google have way more chunks than Yandex, possibly because Yandex resets the whole database sometimes. I have no historical data about either API, but it must not be too hard to implement such monitoring in the future.</p>
 
 <p>Feel free to <a href="https://github.com/nikicat/sbapi/edit/gh-pages/index.html">fix this page</a>.</p>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-via="nbryskin" data-hashtags="sbapi">Tweet</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </section>
 
     </div>
+
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
