--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Safebrowsing API downloader/comparison</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/rickshaw.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
+    <script src="javascripts/d3.v2.min.js"></script>
+    <script src="javascripts/rickshaw.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -57,6 +60,119 @@ size: 1869909
 
 <p>As you can see, Google consolidates chunks so you finally need to download only 73 files for ~8MB database and Yandex provides each chunk in a separate file so there are 1067 files for &lt;2MB database.
 Also, Google have way more chunks than Yandex, possibly because Yandex resets the whole database sometimes. I have no historical data about either API, but it must not be too hard to implement such monitoring in the future.</p>
+
+
+<style>
+#chart_container {
+        position: relative;
+        display: inline-block;
+        font-family: Arial, Helvetica, sans-serif;
+}
+.chart {
+        display: inline-block;
+        margin-left: 40px;
+}
+.y_axis {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 40px;
+}
+.legend {
+        display: inline-block;
+        vertical-align: top;
+        margin: 0 0 0 10px;
+}
+</style>
+
+<div id="chart_container">
+<div class='y_axis' id="y_axis"></div>
+<div class='chart' id="chart"></div>
+<div class='legend' id="legend"></div>
+</div>
+
+<script>
+    'use strict';
+
+    function alignFill(series) {
+        var datas = [{src: serie.data, index: 0, dst: []} for each (serie in series)];
+        while (true) {
+            var minx = Math.min.apply(null, [data.src[data.index].x for each (data in datas)]);
+            for each (data in datas) {
+                var left = data.src[data.index - (data.index > 0 ? 1 : 0)];
+                var right = data.src[data.index - (data.index < data.data.length ? 0 : 1)];
+                var mean = data.src[index].y - data.src[index];
+                data.dst.push({x: minx, y: data.src[data.index-1].y});
+                data.index++;
+            }
+        }
+    }
+
+    var baseurl='https://api.mongolab.com/api/1/databases/sbapihist/collections/';
+    var providers = [{
+        name: 'yandex',
+        color: 'red'
+    }, {
+        name: 'google',
+        color: 'blue'
+    }];
+    var listname = 'goog-malware-shavar';
+    var apikey = '5085cfc1e4b09477b9c1430d';
+    var provider = providers[0];
+    var url = baseurl+provider.name+'.'+listname+'?apiKey='+apikey;
+    $.ajax({url: url, dataType: 'json', success: function(data, status) {
+        provider.data = [{x: d.timestamp, y: d.size} for each (d in data)];
+        provider = providers[1];
+        var url = baseurl+provider.name+'.'+listname+'?apiKey='+apikey;
+        $.ajax({url: url, dataType: 'json', success: function(data, status) {
+            provider.data = [{x: d.timestamp, y: d.size} for each (d in data)];
+            //Rickshaw.Series.zeroFill(providers);
+            var graph = new Rickshaw.Graph( {
+                element: document.querySelector("#chart"),
+                width: 540,
+                height: 240,
+                min: 0,
+                max: 10*1024*1024,
+                renderer: 'line',
+                series: providers
+            } );
+            var x_axis = new Rickshaw.Graph.Axis.Time({
+                graph: graph
+            });
+            var y_axis = new Rickshaw.Graph.Axis.Y( {
+                graph: graph,
+                orientation: 'left',
+                
+                tickFormat: Rickshaw.Fixtures.Number.formatKMBT,
+                element: document.getElementById('y_axis'),
+            } );
+            
+            var legend = new Rickshaw.Graph.Legend( {
+                element: document.querySelector('#legend'),
+                graph: graph
+            } );
+
+            var hoverDetail = new Rickshaw.Graph.HoverDetail( {
+                graph: graph
+            } );
+
+            graph.render();
+        } } );
+    } } );
+        /*$.ajax({
+            url: url,
+            success: function(data) {
+                graph.series.forEach(function(s) {
+                    if (s.name === provider.name) {
+                        s.load(data);
+                    }
+                });
+            }}
+    }
+*/
+
+</script>
+
 
 <p>Feel free to <a href="https://github.com/nikicat/sbapi/edit/gh-pages/index.html">fix this page</a>.</p>
       <a href="https://twitter.com/share" class="twitter-share-button" data-via="nbryskin" data-hashtags="sbapi">Tweet</a>
