--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@ size: 1869909
 </code></pre>
 
 <p>As you can see, Google consolidates chunks so you finally need to download only 73 files for ~8MB database and Yandex provides each chunk in a separate file so there are 1067 files for &lt;2MB database.
-Also, Google have way more chunks than Yandex, possibly because Yandex resets the whole database sometimes. I have no historical data about either API, but it must not be too hard to implement such monitoring in the future.</p>
-
+Also, Google have way more chunks than Yandex, possibly because Yandex resets the whole database sometimes. Historical data since 2012-10-22, chunks count:</p>
 
 <style>
 #chart_container {
@@ -121,18 +120,18 @@ Also, Google have way more chunks than Yandex, possibly because Yandex resets th
     var provider = providers[0];
     var url = baseurl+provider.name+'.'+listname+'?apiKey='+apikey;
     $.ajax({url: url, dataType: 'json', success: function(data, status) {
-        provider.data = [{x: d.timestamp, y: d.size} for each (d in data)];
+        provider.data = [{x: d.timestamp, y: d.chunkCount} for each (d in data)];
         provider = providers[1];
         var url = baseurl+provider.name+'.'+listname+'?apiKey='+apikey;
         $.ajax({url: url, dataType: 'json', success: function(data, status) {
-            provider.data = [{x: d.timestamp, y: d.size} for each (d in data)];
+            provider.data = [{x: d.timestamp, y: d.chunkCount} for each (d in data)];
             //Rickshaw.Series.zeroFill(providers);
             var graph = new Rickshaw.Graph( {
                 element: document.querySelector("#chart"),
                 width: 540,
                 height: 240,
                 min: 0,
-                max: 10*1024*1024,
+                //max: 10*1024*1024,
                 renderer: 'line',
                 series: providers
             } );
@@ -142,16 +141,11 @@ Also, Google have way more chunks than Yandex, possibly because Yandex resets th
             var y_axis = new Rickshaw.Graph.Axis.Y( {
                 graph: graph,
                 orientation: 'left',
-                
+                ticks: 10, 
                 tickFormat: Rickshaw.Fixtures.Number.formatKMBT,
                 element: document.getElementById('y_axis'),
             } );
             
-            var legend = new Rickshaw.Graph.Legend( {
-                element: document.querySelector('#legend'),
-                graph: graph
-            } );
-
             var hoverDetail = new Rickshaw.Graph.HoverDetail( {
                 graph: graph
             } );
@@ -159,18 +153,6 @@ Also, Google have way more chunks than Yandex, possibly because Yandex resets th
             graph.render();
         } } );
     } } );
-        /*$.ajax({
-            url: url,
-            success: function(data) {
-                graph.series.forEach(function(s) {
-                    if (s.name === provider.name) {
-                        s.load(data);
-                    }
-                });
-            }}
-    }
-*/
-
 </script>
 
 
