--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h3>
 <a href="https://developers.google.com/safe-browsing/developers_guide_v2">SafeBrowsing API</a> implementations comparison</h3>
 
-<p>Chrome and Firefox checks every page with malware and phishing blacklists. From the beginning there was only one provider for such lists - Google. About a year ago <a href="http://api.yandex.com/safebrowsing/">Yandex have started to provide Safebrowsing-compatible API</a>.
+<p>Chrome and Firefox checks every page with malware and phishing blacklists. From the beginning there was only one provider for such lists - Google. At 2011 <a href="http://api.yandex.com/safebrowsing/">Yandex have started to provide Safebrowsing-compatible API</a>.
 Here is <a href="https://github.com/nikicat/sbapi/blob/master/sbapi.sh">sbapi.sh script</a>. It downloads all the chunks for malware blacklist and outputs some useful info:</p>
 
 <pre><code>$ ./sbapi.sh google
