--- a/index.html
+++ b/index.html
@@ -157,8 +157,10 @@ Also, Google have way more chunks than Yandex, possibly because Yandex resets th
 
 <p>Data is fully available through REST api, do not corrupt it please.</p>
 <p>Feel free to <a href="https://github.com/nikicat/sbapi/edit/gh-pages/index.html">fix this page</a>.</p>
-      <a href="https://twitter.com/share" class="twitter-share-button" data-via="nbryskin" data-hashtags="sbapi">Tweet</a>
+
+      <a href="https://twitter.com/share" class="twitter-share-button" data-dnt="true">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
       </section>
 
     </div>
